--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,4 +1,6 @@
 unexpected.error=Unexpected error. Please check your information and try again!
+#PAYMENT
+payment.error=Payment failed. Please check information and try again!
 #PRODUCT
 product.not_found.error=Product not found!
 product_id.not_null=Product Id cant be null!
