--- a/src/main/resources/i18n/messages_tr.properties
+++ b/src/main/resources/i18n/messages_tr.properties
@@ -1,4 +1,6 @@
 unexpected.error=Beklenmeyen hata. Lütfen bilgilerinizi kontrol ederek tekrar deneyiniz!
+#PAYMENT
+payment.error=Ödeme yapılamadı. Lütfen bilgileri kontrol ederek tekrar deneyiniz!
 #PRODUCT
 product.not_found.error=Ürün bulunamadı!
 product_id.not_null=Ürün Id boş olamaz!
